# FractalDB-Pretrained-ResNet-PyTorch

./: .gitignore  .gitmodules  README.md  exe.sh  exe_parallel.sh  main.py  pyproject.toml
finetuning/: main.py  model_select.py  train_val.py
fractal_renderer/: make_fractaldb.py
pretraining/: main.py  train_val.py
runs/FractalDB-1000_resnet18_20260119-222336/: events.out.tfevents.1768829016.server-113-107.3355818.0
runs/pt_FractalDB-1000_ft_CIFAR10_resnet18_20260120-163931/: events.out.tfevents.1768894771.server-113-107.3374405.0
